# sf-ddl-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  sfddl.sample.json
.github/workflows/: publish-pypi.yml  release.yml
databases/BUS_CYBER_RISK_MANAGEMENT/CEDE/schemas/: CEDE.sql
databases/BUS_CYBER_RISK_MANAGEMENT/CEDE/views/: VW_CEDE_ALLOCATED_CONTROLS.sql  VW_CEDE_AUTHORIZATION_PACKAGES_240216.sql  VW_CEDE_AUTHORIZATION_PACKAGES_POL.sql  VW_CEDE_CFACTS_USER_PERSMISSIONS.sql  VW_CEDE_CONTROL_DETAIL_WITH_POAM.sql  VW_CEDE_CONTROL_DETAIL_WITH_POAM_240212.sql  VW_CEDE_POAM.sql  VW_CEDE_POAMS_CONTROLS.sql  VW_CEDE_PRIORITIZATION_DATA_SENSITIVITY.sql  VW_CEDE_PRIORITIZATION_SECURITY_POSTURE.sql  VW_CEDE_PRIORITIZATION_SYSTEM_CRITICALITY.sql  VW_CEDE_PRIVACY_IMPACT_ASSESSMENT_PIA.sql  VW_CEDE_SYSTEM_DETAIL_WITH_PRIORITIZATION.sql  VW_CEDE_SYSTEM_DETAIL_WITH_PRIORITIZATION_240216.sql  VW_CEDE_SYSTEM_PII_LEVEL.sql
databases/BUS_CYBER_RISK_MANAGEMENT/CORE/functions/: FN_CRM_CHARACTER_SEVERITY.sql  FN_CRM_CLEANSTRING.sql  FN_CRM_CLEANSTRING_CHRIS.sql  FN_CRM_CLEAN_FORESCOUT_STRING.sql  FN_CRM_DISCOVER_PATTERN.sql  FN_CRM_FISMASEVERITY.sql  FN_CRM_FORMAT_BOOLEAN.sql  FN_CRM_FORMAT_VARCHAR_DATE.sql  FN_CRM_GETUID_DEFAULT.sql  FN_CRM_GETUID_NOTPROVIDED.sql  FN_CRM_GETUID_NOTVALID.sql  FN_CRM_GETUID_UNASSIGNED_OPLOC.sql  FN_CRM_GETUID_UNLINKED.sql  (+41 more)
full_db/: fulldb.sql
full_db_off/: fulldb_20260102_113230.sql  test.sql  test_fulldb.sql
scripts/: release.py
src/sfddl/: __init__.py  cli.py  ddl_parser.py  refresh_fulldb.py
tests/: conftest.py  test_cli.py  test_ddl_parser.py  test_refresh_fulldb.py
(+531 files in other folders)
