[project]
name = "snowflake-ddl-organizer"
version = "0.1.0"
description = "Extract and organize Snowflake DDL into a clean folder structure"
authors = [{ name = "Tom Gebicke", email = "tom.gebicke@datacoders.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["snowflake-connector-python>=3.0.0"]
keywords = ["snowflake", "ddl", "database", "sql", "schema", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/snowflake-ddl-organizer"
Repository = "https://github.com/YOUR_USERNAME/snowflake-ddl-organizer"
Issues = "https://github.com/YOUR_USERNAME/snowflake-ddl-organizer/issues"

[project.scripts]
sfddl = "sfddl.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "sfddl", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
